--- a/about.html
+++ b/about.html
@@ -31,7 +31,9 @@
             <div class="juice-portrait">
                 <img src="/assets/artist-about.jpg">
             </div>
-
+            <div class="artist-name">
+                <p>Jarad Anthony Higgins a.k.a "Juice WRLD"</p>
+            </div>   
             <div class="artist-about">
                 <p>hi hello</p>
             </div>
