--- a/about.html
+++ b/about.html
@@ -2,47 +2,42 @@
 
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="description" content="" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="styles.css" />
         <title>This is Juice WRLD</title>
-         </head>
-         
+    </head>
+
     <body>
-    <div class="navbar">
-        <a href="/home.html">
-        <img class="logo" src="assets/Logo.png" alt="logo"> <!-- logo -->
-        </a>
+        <div class="navbar">
+            <a href="/home.html">
+                <img class="logo" src="assets/Logo.png" alt="logo" />
+                <!-- logo -->
+            </a>
 
-        <div class="nav-links">
-        <a class="active" class="nav-links" href="/home.html">Home</a>
-        <a  href="/about.html">About</a>
-        <a  href="/music.html">Music</a>
-        <a  href="/stats.html">Stats</a>
-        <a  href="/merch.html">Merch</a>
-        </div>
-    </div>
-   
-    <div class="about-background">
-        <div class="artist-section">
-            <div class="juice-portrait">
-                <img src="/assets/artist-about.jpg">
-            </div>
-            <div class="artist-name">
-                <p>Jarad Anthony Higgins a.k.a "Juice WRLD"</p>
-            </div>   
-            <div class="artist-about">
-                <p>hi hello</p>
+            <div class="nav-links">
+                <a class="active" class="nav-links" href="/home.html">Home</a>
+                <a href="/about.html">About</a>
+                <a href="/music.html">Music</a>
+                <a href="/stats.html">Stats</a>
+                <a href="/merch.html">Merch</a>
             </div>
         </div>
-    </div>
-</div>
 
-
-
-
-
-</body>
+        <div class="about-background">
+            <div class="artist-section">
+                <div class="juice-portrait">
+                    <img src="/assets/artist-about.jpg" />
+                </div>
+                <div class="artist-name">
+                    <p>Jarad Anthony Higgins a.k.a "Juice WRLD"</p>
+                </div>
+                <div class="artist-about">
+                    <p>hi hello</p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
