Amend image paths following structure change

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <body>
         <div class="navbar">
             <a href="/home.html">
-                <img class="logo" src="assets/Logo.png" alt="logo" />
+                <img class="logo" src="assets/img/Logo.png" alt="logo" />
                 <!-- logo -->
             </a>
 
@@ -29,7 +29,7 @@
         <div class="about-background">
             <div class="artist-section">
                 <div class="juice-portrait">
-                    <img src="/assets/artist-about.jpg" />
+                    <img src="assets/img/artist-about.jpg" />
                 </div>
                 <div class="artist-name">
                     <p>Jarad Anthony Higgins a.k.a "Juice WRLD"</p>
