--- a/stats.html
+++ b/stats.html
@@ -13,7 +13,7 @@
     <body>
         <div class="navbar">
             <a href="/home.html">
-                <img class="logo" src="assets/Logo.png" alt="logo" />
+                <img class="logo" src="assets/img/Logo.png" alt="logo" />
                 <!-- logo -->
             </a>
 
@@ -32,7 +32,7 @@
             <div class="box">
                 <span class="stream-number">30B+</span>Billion Spotify Streams
                 <a target="_blank" href="https://open.spotify.com/artist/4MCBfE4596Uoi2O4DtmEMz">
-                    <img class="spotify" src="/assets/spotify.png" />
+                    <img class="spotify" src="/assets/img/spotify.png" />
                 </a>
                 <p class="pSpotify">Stream on Spotify</p>
             </div>
@@ -40,14 +40,14 @@
             <div class="box">
                 <span class="stream-number">26B</span>Billion SoundCloud Streams
                 <a target="_blank" href="https://soundcloud.com/uiceheidd">
-                    <img class="soundcloud" src="/assets/soundcloud.png" />
+                    <img class="soundcloud" src="/assets/img/soundcloud.png" />
                 </a>
                 <p class="pSoundCloud">Stream on SoundCloud</p>
             </div>
             <div class="box">
                 <span class="stream-number">5.9B</span>Billion YouTube Views
                 <a target="_blank" href="https://www.youtube.com/@JuiceWRLD">
-                    <img class="youtube" src="/assets/youtube.png" />
+                    <img class="youtube" src="/assets/img/youtube.png" />
                 </a>
                 <p class="pYouTube">Watch on YouTube</p>
             </div>
