--- a/stats.html
+++ b/stats.html
@@ -18,11 +18,11 @@
             </a>
 
             <div class="nav-links">
-                <a class="active" class="nav-links" href="/home.html">Home</a>
-                <a href="/about.html">About</a>
-                <a href="/music.html">Music</a>
-                <a href="/music.html">Stats</a>
-                <a href="/music.html">Merch</a>
+                <a href="home.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="music.html">Music</a>
+                <a class="active" href="stats.html">Stats</a>
+                <a href="merch.html">Merch</a>
             </div>
         </div>
 
