Fix broken images

--- a/stats.html
+++ b/stats.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="assets/css/styles.css" />
         <title>This is Juice WRLD</title>
     </head>
 
@@ -32,7 +32,7 @@
             <div class="box">
                 <span class="stream-number">30B+</span>Billion Spotify Streams
                 <a target="_blank" href="https://open.spotify.com/artist/4MCBfE4596Uoi2O4DtmEMz">
-                    <img class="spotify" src="/assets/img/spotify.png" />
+                    <img class="spotify" src="assets/img/spotify.png" />
                 </a>
                 <p class="pSpotify">Stream on Spotify</p>
             </div>
@@ -40,19 +40,19 @@
             <div class="box">
                 <span class="stream-number">26B</span>Billion SoundCloud Streams
                 <a target="_blank" href="https://soundcloud.com/uiceheidd">
-                    <img class="soundcloud" src="/assets/img/soundcloud.png" />
+                    <img class="soundcloud" src="assets/img/soundcloud.png" />
                 </a>
                 <p class="pSoundCloud">Stream on SoundCloud</p>
             </div>
             <div class="box">
                 <span class="stream-number">5.9B</span>Billion YouTube Views
                 <a target="_blank" href="https://www.youtube.com/@JuiceWRLD">
-                    <img class="youtube" src="/assets/img/youtube.png" />
+                    <img class="youtube" src="assets/img/youtube.png" />
                 </a>
                 <p class="pYouTube">Watch on YouTube</p>
             </div>
         </div>
 
-        <script src="randomize-stats.js"></script>
+        <script src="assets/js/randomize-stats.js"></script>
     </body>
 </html>
