--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="assets/css/styles.css" />
         <title>This is Juice WRLD</title>
     </head>
 
