--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             </a>
 
             <div class="nav-links">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a class="active" href="about.html">About</a>
                 <a href="music.html">Music</a>
                 <a href="stats.html">Stats</a>
