--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </a>
 
             <div class="nav-links">
-                <a class="active" href="home.html">Home</a>
+                <a class="active" href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="music.html">Music</a>
                 <a href="stats.html">Stats</a>
