--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                     <p class="quote-author">- Juice WRLD</p>
                 </div>
             </div>
-            <a href="/about.html#early-life">
+            <a href="https://kxai99.github.io/JuiceWrldFanWebsite/about.html#early-life">
                 <button class="btn">Discover Juice WRLD</button>
             </a>
         </div>
