update images and stats page

--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
                     <p>Juice WRLD was known for his impressive freestyle abilities, often creating songs spontaneously for hours at a time. His melodic approach to rap and emotional vulnerability helped push the boundaries of what hip-hop could express.</p>
                 </div>
                 <div class="about-section-image style-image">
-                    <img src="assets/img/test.jpg" alt="Juice WRLD performing">
+                    <img src="assets/img/juiceperform.jpg" alt="Juice WRLD performing">
                     <div class="style-caption">
                         <p>"I was singing 'Street Fighter' songs and stuff. The last song I made, I freestyled for 45 minutes." - Juice WRLD</p>
                     </div>
@@ -216,7 +216,7 @@
             </div>
             <div class="about-section-flex">
                 <div class="about-section-image">
-                    <img src="assets/img/hero-juice.jpeg" alt="Juice WRLD portrait">
+                    <img src="assets/img/juicewrldstr.jpg" alt="Juice WRLD portrait">
                 </div>
                 <div class="about-section-text">
                     <p>Throughout his life, Juice WRLD struggled with substance abuse issues. He began drinking lean (a codeine-based mixture) in sixth grade and started using Percocet and Xanax in 2013. He was also a cigarette smoker before quitting in his last year of high school due to health concerns.</p>
