--- a/stats.html
+++ b/stats.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="description" content="" />
+        <meta name="description" content="View Juice WRLD's impressive streaming statistics across platforms including Spotify, SoundCloud, and YouTube." />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="assets/css/styles.css" />
-        <title>This is Juice WRLD</title>
+        <title>Juice WRLD - Streaming Statistics</title>
     </head>
 
     <body>
@@ -25,30 +25,145 @@
             </div>
         </div>
 
-        <h1 class="Stats">Recent Stats</h1>
+        <div class="stats-hero">
+            <h1>Streaming Statistics</h1>
+            <p class="stats-subtitle">The numbers behind Juice WRLD's legacy</p>
+        </div>
 
-        <div class="container">
-            <div class="box">
-                <span class="stream-number">30B+</span>Billion Spotify Streams
-                <a target="_blank" href="https://open.spotify.com/artist/4MCBfE4596Uoi2O4DtmEMz">
-                    <img class="spotify" src="assets/img/spotify.png" />
-                </a>
-                <p class="pSpotify">Stream on Spotify</p>
+        <div class="stats-container">
+            <div class="stats-card">
+                <div class="stats-platform">
+                    <a target="_blank" href="https://open.spotify.com/artist/4MCBfE4596Uoi2O4DtmEMz">
+                        <img class="stats-icon" src="assets/img/spotify.png" alt="Spotify icon" />
+                    </a>
+                </div>
+                <div class="stats-number-container">
+                    <span class="stream-number">30B+</span>
+                    <span class="stats-label">Spotify Streams</span>
+                </div>
+                <div class="stats-details">
+                    <div class="stats-detail-item">
+                        <span class="detail-label">Monthly Listeners:</span>
+                        <span class="detail-value">30+ Million</span>
+                    </div>
+                    <div class="stats-detail-item">
+                        <span class="detail-label">Top Track:</span>
+                        <span class="detail-value">"Lucid Dreams" (2B+ streams)</span>
+                    </div>
+                    <a target="_blank" href="https://open.spotify.com/artist/4MCBfE4596Uoi2O4DtmEMz" class="stats-cta">
+                        Listen on Spotify
+                    </a>
+                </div>
             </div>
 
-            <div class="box">
-                <span class="stream-number">26B</span>Billion SoundCloud Streams
-                <a target="_blank" href="https://soundcloud.com/uiceheidd">
-                    <img class="soundcloud" src="assets/img/soundcloud.png" />
-                </a>
-                <p class="pSoundCloud">Stream on SoundCloud</p>
+            <div class="stats-card">
+                <div class="stats-platform">
+                    <a target="_blank" href="https://soundcloud.com/uiceheidd">
+                        <img class="stats-icon" src="assets/img/soundcloud.png" alt="SoundCloud icon" />
+                    </a>
+                </div>
+                <div class="stats-number-container">
+                    <span class="stream-number">26B</span>
+                    <span class="stats-label">SoundCloud Streams</span>
+                </div>
+                <div class="stats-details">
+                    <div class="stats-detail-item">
+                        <span class="detail-label">Followers:</span>
+                        <span class="detail-value">2.5+ Million</span>
+                    </div>
+                    <div class="stats-detail-item">
+                        <span class="detail-label">Top Track:</span>
+                        <span class="detail-value">"All Girls Are The Same" (85M+ plays)</span>
+                    </div>
+                    <a target="_blank" href="https://soundcloud.com/uiceheidd" class="stats-cta">
+                        Listen on SoundCloud
+                    </a>
+                </div>
             </div>
-            <div class="box">
-                <span class="stream-number">5.9B</span>Billion YouTube Views
-                <a target="_blank" href="https://www.youtube.com/@JuiceWRLD">
-                    <img class="youtube" src="assets/img/youtube.png" />
-                </a>
-                <p class="pYouTube">Watch on YouTube</p>
+
+            <div class="stats-card">
+                <div class="stats-platform">
+                    <a target="_blank" href="https://www.youtube.com/@JuiceWRLD">
+                        <img class="stats-icon" src="assets/img/youtube.png" alt="YouTube icon" />
+                    </a>
+                </div>
+                <div class="stats-number-container">
+                    <span class="stream-number">5.9B</span>
+                    <span class="stats-label">YouTube Views</span>
+                </div>
+                <div class="stats-details">
+                    <div class="stats-detail-item">
+                        <span class="detail-label">Subscribers:</span>
+                        <span class="detail-value">8.5+ Million</span>
+                    </div>
+                    <div class="stats-detail-item">
+                        <span class="detail-label">Top Video:</span>
+                        <span class="detail-value">"Lucid Dreams" (800M+ views)</span>
+                    </div>
+                    <a target="_blank" href="https://www.youtube.com/@JuiceWRLD" class="stats-cta">
+                        Watch on YouTube
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="stats-achievements">
+            <h2>Major Achievements</h2>
+            <div class="achievements-container">
+                <div class="achievement-item">
+                    <div class="achievement-icon">🏆</div>
+                    <div class="achievement-content">
+                        <h3>"Lucid Dreams" Certified Diamond</h3>
+                        <p>RIAA Diamond certification (10x Platinum) in 2022</p>
+                    </div>
+                </div>
+                <div class="achievement-item">
+                    <div class="achievement-icon">🔥</div>
+                    <div class="achievement-content">
+                        <h3>"Legends Never Die" Album</h3>
+                        <p>Biggest posthumous debut in Billboard history</p>
+                    </div>
+                </div>
+                <div class="achievement-item">
+                    <div class="achievement-icon">🌐</div>
+                    <div class="achievement-content">
+                        <h3>Global Impact</h3>
+                        <p>Over 70 billion combined streams across all platforms</p>
+                    </div>
+                </div>
+                <div class="achievement-item">
+                    <div class="achievement-icon">🎵</div>
+                    <div class="achievement-content">
+                        <h3>Billboard Chart Success</h3>
+                        <p>Multiple #1 albums on the Billboard 200 chart</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="stats-chart-section">
+            <h2>Top Songs by Streams</h2>
+            <div class="stats-chart">
+                <div class="chart-bar-container">
+                    <div class="chart-label">Lucid Dreams</div>
+                    <div class="chart-bar" style="width: 100%;">2B+</div>
+                </div>
+                <div class="chart-bar-container">
+                    <div class="chart-label">All Girls Are The Same</div>
+                    <div class="chart-bar" style="width: 75%;">1.5B+</div>
+                </div>
+                <div class="chart-bar-container">
+                    <div class="chart-label">Robbery</div>
+                    <div class="chart-bar" style="width: 65%;">1.3B+</div>
+                </div>
+                <div class="chart-bar-container">
+                    <div class="chart-label">Come & Go</div>
+                    <div class="chart-bar" style="width: 55%;">1.1B+</div>
+                </div>
+                <div class="chart-bar-container">
+                    <div class="chart-label">Wishing Well</div>
+                    <div class="chart-bar" style="width: 50%;">1B+</div>
+                </div>
             </div>
         </div>
 
