--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p class="quote-author">- Juice WRLD</p>
                 </div>
             </div>
-            <a href="/about.html">
+            <a href="/JuiceWrldFanWebsite/about.html">
                 <button class="btn">Discover Juice WRLD</button>
             </a>
         </div>
